# DesignPatterns

./: CMakeLists.txt  test.cpp
Decorator/include/: Decorator.h
Decorator/src/: Giant.cpp
Prototype/: .gitignore  CMakeLists.txt  README.md  test_with_factory.cpp  test_wo_factory.cpp
Prototype/include/: Factory.h  Resume.h  TypeResume.h
Prototype/src/: Resume.cpp  TypeResume.cpp
include/: Giant.h
